--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               width="540"
               height="560"
             />
+
             <div class="card-content">
               <h2 class="h2">XX99 Mark I Headphones</h2>
               <p class="paragraph">
@@ -68,8 +69,9 @@
               width="540"
               height="560"
             />
+
             <div class="card-content">
-              <h2 class="h2">XX59 <br>Headphones</h2>
+              <h2 class="h2">XX59 <br />Headphones</h2>
               <p class="paragraph">
                 Enjoy your audio almost anywhere and customize it to your
                 specific tastes with the XX59 headphones. The stylish yet
